<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_title">Search Image</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="color">Color</string>
    <string name="site">Site</string>
    <string name="type">Type</string>
    <string name="size">Size</string>

    
    <string-array name="type_array">
        <item>jpg</item>
        <item>png</item>
        <item>gif</item>
        <item>bmp</item>
    </string-array>
    
    
    <string-array name="size_array">
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
        <string name="apply">Apply</string>
    
</resources>
