<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FilterActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color" />

            <EditText
                android:id="@+id/et_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site" />

            <EditText
                android:id="@+id/et_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" >
        	
        	<TextView
        	    android:id="@+id/tv_type"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/type" />

        	<Spinner
        	    android:id="@+id/spinner_type"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_weight="1" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" >
        	
        	<TextView
        	    android:id="@+id/tv_size"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/size" />

        	<Spinner
        	    android:id="@+id/spinner_size"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_weight="1" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" >

        	<Button
        	    android:id="@+id/bt_apply"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:background="#50960c1e"
        	    android:onClick="onApplyPress"
        	    android:text="@string/apply" />
            
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
